z-index fix for IE where the note window was ending up behind the card (pdf) viewer. Reference Trello card #1806.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@20120 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_link-styles.scss
+++ b/src/main/resources/scss/_link-styles.scss
@@ -122,6 +122,10 @@ a{
 		box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.3);
 		overflow: visible;
 
+		.x-ie &, .x-ie10 &{
+			z-index: -2;
+		}
+
 		.back-button{
 			cursor: pointer;
 			position: absolute;
